# vector_photoproduction

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
executables/: 1S_2S_comparison.cpp  X3872_photoproduction.cpp  X6900.cpp  X_production.cpp  Y4220_photoproduction.cpp  Y4260_photoproduction.cpp  Y_production.cpp  Z_production.cpp  Zc_photoproduction.cpp  asymmetry_pentaquark.cpp  chi_c1_photoproduction.cpp  photoPlotter.hpp  polarized_pentaquark.cpp  psi_comparison.cpp  s_channel_test.cpp  sum_test.cpp  t_channel_test.cpp  test.cpp
executables/XYZ_plots/: X3872_high.cpp  X3872_low.cpp  X6900.cpp  Y_high.cpp  Y_low.cpp  Z_high.cpp  Z_low.cpp  primakoff.cpp  primakoff_differential.cpp  primakoff_integrated.cpp
executables/exclusive_XYZ/: X6900.cpp  Y_low.cpp  primakoff_differential.cpp  primakoff_integrated.cpp
executables/inclusive_XYZ/: field_fox_test.cpp  incZ.cpp  incZ_high.cpp
executables/open_charm/: LambdaD.cpp  d_meson.cpp  disc.cpp  jpsi_DDstar.cpp  loop_amp.cpp
executables/pentaquark/: 5q_mc.cpp  asymmetry_pentaquark.cpp  average_asymmetry.cpp  integrated_asymmetry.cpp  mc_test.cpp  polarized_pentaquark.cpp  pomeron_compare.cpp
executables/tests/: reggeon_exchange_test.cpp  s_channel_test.cpp  sum_test.cpp  t_channel_test.cpp  vector_exchange_test.cpp
include/: constants.hpp  dirac_spinor.hpp  gamma_matrices.hpp  gamma_technology.hpp  helicities.hpp  integration.hpp  misc_math.hpp  polarization_vector.hpp  pomeron_exchange.hpp  reaction_kinematics.hpp  regge_trajectory.hpp  toy_monte_carlo.hpp  two_body_state.hpp  utilities.hpp
include/amplitudes/: amplitude.hpp  amplitude_sum.hpp  baryon_resonance.hpp  charm_loop.hpp  dirac_exchange.hpp  fermion_exchange.hpp  pomeron_exchange.hpp  primakoff_effect.hpp  pseudoscalar_exchange.hpp  rarita_exchange.hpp  reaction_kinematics.hpp  reggeized_baryon.hpp  reggeized_meson.hpp  reggeized_meson_exchange.hpp  reggeon_exchange.hpp  vector_exchange.hpp  vector_meson_exchange.hpp
include/inclusive/: ffTripleRegge.hpp  field_fox_couplings.hpp  inclusive_kinematics.hpp  jpacTripleRegge.hpp  sigma_tot.hpp  triple_regge.hpp
include/one_loop/: box_amplitude.hpp  box_discontinuity.hpp  charm_loop.hpp
jpacStyle/: README.md
jpacStyle/include/: jpacGraph1D.hpp  jpacGraph1Dc.hpp  jpacGraph2D.hpp  jpacPlotter.hpp
jpacStyle/src/: jpacColors.cpp  jpacGraph1D.cpp  jpacGraph1Dc.cpp  jpacGraph2D.cpp  jpacPlotter.cpp
src/: cgamma.cpp  dirac_spinor.cpp  gamma_matrices.cpp  gamma_technology.cpp  integration.cpp  polarization_vector.cpp  pomeron_exchange.cpp  reaction_kinematics.cpp  toy_monte_carlo.cpp  two_body_state.cpp  utilities.cpp  wigner_d.cpp
src/amplitudes/: amplitude_sum.cpp  baryon_resonance.cpp  dirac_exchange.cpp  fermion_exchange.cpp  observables.cpp  pomeron_exchange.cpp  primakoff_effect.cpp  pseudoscalar_exchange.cpp  rarita_exchange.cpp  (+6 more)
(+5 files in other folders)
